footer added, with some additional changes

--- a/index.html
+++ b/index.html
@@ -1,68 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Elsie&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">    
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Elsie&family=Lato:wght@300;400;700&display=swap"
+        rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/72c17cd760.js" crossorigin="anonymous"></script>
     <title>Cosmetic</title>
 </head>
+
 <body>
     <nav class="navBar">
         <div class="logo">Logo</div>
         <div class="navBtn">
-                <a href="">HOME</a>
-                <a href="">BUY</a>
-                <a href="">NEW</a>
-                <a href="">THINGS</a>
+            <a href="">HOME</a>
+            <a href="">BUY</a>
+            <a href="">NEW</a>
+            <a href="">THINGS</a>
         </div>
-        <a href="" class="navCart"><span class="material-symbols-outlined" style="color: #0C1713;">shopping_cart</span></a>
+        <a href="" class="navCart"><span class="material-symbols-outlined"
+                style="color: #0c1713">shopping_cart</span></a>
     </nav>
     <main>
         <div class="image_container">
             <h1 class="mainHeading">NATURE~INSPIRED</h1>
             <p class="subHead">Our mission is to create nature based products</p>
-            <img class="leaf_infront" src="./img/leaf_infront.png" alt="">
-            <img class="leaf_left" src="./img/front_blue_left.png" alt="">
-            <img class="leaf_right" src="./img/blur-leaves2.png" alt="">
-            <img class="behind_main" src="./img/behind_main.png" alt="">
-            <img class= "main_img" src="./img/main_cosmetic.png" alt="">
-            <img class="main_img1" src="./img/main_front.png" alt="">
-            <img class="top_left_img" src="./img/left_behind.png" alt="">
-            <img class="top_right_img" src="./img/right_behind.png" alt="">    
+            <img class="leaf_infront" src="./img/leaf_infront.png" alt="" />
+            <img class="leaf_left" src="./img/front_blue_left.png" alt="" />
+            <img class="leaf_right" src="./img/blur-leaves2.png" alt="" />
+            <img class="behind_main" src="./img/behind_main.png" alt="" />
+            <img class="main_img" src="./img/main_cosmetic.png" alt="" />
+            <img class="main_img1" src="./img/main_front.png" alt="" />
+            <img class="top_left_img" src="./img/left_behind.png" alt="" />
+            <img class="top_right_img" src="./img/right_behind.png" alt="" />
         </div>
     </main>
-    <div class="btnGrp" style="display: flex;">
+    <div class="btnGrp" style="display: flex">
         <button class="buyNow">Buy Now</button>
-        <div class="discover" style="display: flex;">
-            <img src="./img/arrow.png" alt="">
-            <p>Discover More</p>
+        <div class="discover" style="display: flex" href="#heroo">
+            <a href="#heroo" style="
+						display: flex;
+						align-items: center;
+						text-decoration: none;
+						color: #0c1713;
+					">
+                <img src="./img/arrow.png" alt="" />
+                <p>Discover More</p>
+            </a>
         </div>
     </div>
 
     <div class="heroPage">
         <div class="image_container_hero">
-            <h1 class="mainHeadingHero">GET YOUR NATURAL <br> SKIN</h1>
-            <p class="mainSubheadingHero">Without additives, without fillers ,only pure <br>essential oil. Unwavering commitment to the <br>highest quality products</p>
+            <h1 class="mainHeadingHero">
+                GET YOUR NATURAL <br />
+                SKIN
+            </h1>
+            <p class="mainSubheadingHero">
+                Without additives, without fillers ,only pure <br />essential oil.
+                Unwavering commitment to the <br />highest quality products
+            </p>
             <button class="buyNowHero">Buy Now</button>
-            <div class="infoHead" >
-                <p class="info" style="color: #0C1713; border-right: 2px solid #0C1713; font-weight: bold;">930K</p>
-                <p class="info" style="color: #0C1713; border-right: 2px solid #0C1713; font-weight: bold;">266K</p>
-                <p class="info" style="color: #0C1713; font-weight: bold;" >40+</p>
-                <p class="info" style="color: #FAF8E9; border-right: 2px solid #0C1713;">Product sale</p>
-                <p class="info" style="color: #FAF8E9; border-right: 2px solid #0C1713;">Happy customer</p>
-                <p class="info" style="color: #FAF8E9;">Shops</p>
-                
+            <div class="infoHead" id="heroo">
+                <p class="info" style="
+							color: #0c1713;
+							border-right: 2px solid #0c1713;
+							font-weight: bold;
+						">
+                    930K
+                </p>
+                <p class="info" style="
+							color: #0c1713;
+							border-right: 2px solid #0c1713;
+							font-weight: bold;
+						">
+                    266K
+                </p>
+                <p class="info" style="color: #0c1713; font-weight: bold">40+</p>
+                <p class="info" style="color: #faf8e9; border-right: 2px solid #0c1713">
+                    Product sale
+                </p>
+                <p class="info" style="color: #faf8e9; border-right: 2px solid #0c1713">
+                    Happy customer
+                </p>
+                <p class="info" style="color: #faf8e9">Shops</p>
             </div>
             <div class="right_img">
-                <img class="podium" src="./img/podium_without_bg.png" alt="" srcset="">
-                <img class="podium_img" src="./img/main_cosmetic.png" alt="" srcset="">
+                <img class="podium" src="./img/podium_without_bg.png" alt="" srcset="" />
+                <img class="podium_img" src="./img/main_cosmetic.png" alt="" srcset="" />
             </div>
         </div>
     </div>
 
-    <script defer src="anim.js"></script>
+    <footer>
+        <div class="footerBorder"></div>
+        <div class="footerContent">
+            <div class="footerText">
+                <p style="font-family: 'DM Sans', sans-serif">
+                    Copyright © 2023 Cosmetic. All rights reserved.
+                </p>
+            </div>
+            <div class="contacts">
+                <a href="https://www.instagram.com/karthikjr._/?igshid=NTc4MTIwNjQ2YQ%3D%3D" target="_blank"
+                    rel="noopener noreferrer">
+                    <i class="fa-brands fa-instagram fa-xl" style="color: #0c1713; cursor: pointer"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/karthik-j-rao/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-linkedin fa-xl" style="color: #0c1713; cursor: pointer"></i>
+                </a>
+                <a href="https://github.com/karthiikJR" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-github fa-xl" style="color: #0c1713; cursor: pointer"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
+
+    <script defer>
+        window.onload = function () {
+            var script = document.createElement("script");
+            script.src = "anim.js";
+            document.body.appendChild(script);
+        };
+    </script>
 </body>
+
 </html>
