--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img class="top_right_img" src="./img/right_behind.png" alt="" />
         </div>
     </main>
-    <div class="btnGrp" style="display: flex">
+    <div class="btnGrp" style="display: flex;">
         <button class="buyNow">Buy Now</button>
         <div class="discover" style="display: flex" href="#heroo">
             <a href="#heroo" style="
