Added Media queries
Media queries of
1. Desktop ( >= 1024px)
2. Tablet ( >= 768px)
3. Mobile ( >= 320px) - On going

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="media.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -63,8 +64,8 @@
                 SKIN
             </h1>
             <p class="mainSubheadingHero">
-                Without additives, without fillers ,only pure <br />essential oil.
-                Unwavering commitment to the <br />highest quality products
+                Without additives, without fillers ,only pure essential oil.
+                Unwavering commitment to the highest quality products
             </p>
             <button class="buyNowHero">Buy Now</button>
             <div class="infoHead" id="heroo">
