Updating Media queries

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
     <div class="heroPage">
         <div class="image_container_hero">
             <h1 class="mainHeadingHero">
-                GET YOUR NATURAL <br />
-                SKIN
+                GET YOUR NATURAL SKIN
             </h1>
             <p class="mainSubheadingHero">
                 Without additives, without fillers ,only pure essential oil.
