--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
             <div class="contacts">
                 <a href="https://www.instagram.com/karthikjr._/?igshid=NTc4MTIwNjQ2YQ%3D%3D" target="_blank"
                     rel="noopener noreferrer">
-                    <i class="fa-brands fa-instagram fa-xl" style="color: #0c1713; cursor: pointer"></i>
+                    <i class="fa-brands fa-instagram fa-xl icons" style="color: #0c1713; cursor: pointer"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/karthik-j-rao/" target="_blank" rel="noopener noreferrer">
-                    <i class="fa-brands fa-linkedin fa-xl" style="color: #0c1713; cursor: pointer"></i>
+                    <i class="fa-brands fa-linkedin fa-xl icons" style="color: #0c1713; cursor: pointer"></i>
                 </a>
                 <a href="https://github.com/karthiikJR" target="_blank" rel="noopener noreferrer">
-                    <i class="fa-brands fa-github fa-xl" style="color: #0c1713; cursor: pointer"></i>
+                    <i class="fa-brands fa-github fa-xl icons" style="color: #0c1713; cursor: pointer"></i>
                 </a>
             </div>
         </div>
